@@ -12,41 +12,118 @@
         <java.version>11</java.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <project.testing.localhost>false</project.testing.localhost>
         <project.testing.tags>unit, integration</project.testing.tags>
-        <project.testing.argLine/>
-
-        <project.testing.jacoco.reportPath>${project.basedir}/../target/jacoco-ut.exec
-        </project.testing.jacoco.reportPath>
-        <project.testing.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec
-        </project.testing.jacoco.itReportPath>
+        <project.testing.arguments>
+            --add-reads de.raphaelmuesseler.financer.shared=org.hibernate.orm.core
+            --add-reads de.raphaelmuesseler.financer.shared=ALL-UNNAMED
+            --add-opens de.raphaelmuesseler.financer.shared/de.raphaelmuesseler.financer.shared.model.db=ALL-UNNAMED
+            --add-opens
+            de.raphaelmuesseler.financer.client.javafx/de.raphaelmuesseler.financer.client.javafx.main=ALL-UNNAMED
+            --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+            --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+            --add-exports javafx.graphics/com.sun.javafx.css=org.controlsfx.controls
+            --add-exports javafx.graphics/com.sun.javafx.scene=com.jfoenix
+            --add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix
+            --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
+            --add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix
+            --add-exports javafx.base/com.sun.javafx.binding=com.jfoenix
+            --add-exports javafx.base/com.sun.javafx.event=com.jfoenix
+        </project.testing.arguments>
+        <project.testing.headless/>
     </properties>
+
+    <modules>
+        <module>de.raphaelmuesseler.financer.client</module>
+        <module>de.raphaelmuesseler.financer.client.javafx</module>
+        <module>de.raphaelmuesseler.financer.server</module>
+        <module>de.raphaelmuesseler.financer.shared</module>
+        <module>de.raphaelmuesseler.financer.util</module>
+    </modules>
 
     <profiles>
         <profile>
-            <id>unitTests</id>
+            <!-- only the modules shared, util and client can be executed with this profile -->
+            <id>android-dependency</id>
+            <properties>
+                <maven.compiler.source>1.8</maven.compiler.source>
+                <maven.compiler.target>1.8</maven.compiler.target>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.8.1</version>
+                        <configuration>
+                            <excludes>
+                                <exclude>**/module-info.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>deploy</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jmod-plugin</artifactId>
+                        <version>3.0.0-alpha-2-SNAPSHOT</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.ow2.asm</groupId>
+                                <artifactId>asm</artifactId>
+                                <version>7.1</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jlink-plugin</artifactId>
+                        <version>3.0.0-alpha-1</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <noHeaderFiles>true</noHeaderFiles>
+                            <noManPages>true</noManPages>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.ow2.asm</groupId>
+                                <artifactId>asm</artifactId>
+                                <version>7.1</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>unit-tests</id>
             <properties>
                 <project.testing.tags>unit</project.testing.tags>
             </properties>
         </profile>
         <profile>
-            <id>integrationTests</id>
+            <id>integration-tests</id>
             <properties>
                 <project.testing.tags>integration</project.testing.tags>
             </properties>
         </profile>
         <profile>
-            <id>localTesting</id>
+            <id>headless-testing</id>
             <properties>
-                <project.testing.localhost>true</project.testing.localhost>
-            </properties>
-        </profile>
-        <profile>
-            <id>headlessTesting</id>
-            <properties>
-                <argLine>-Dtestfx.robot=glass -Dglass.platform=Monocle -Dmonocle.platform=Headless</argLine>
+                <project.testing.headless>
+                    -Dtestfx.robot=glass
+                    -Dglass.platform=Monocle
+                    -Dmonocle.platform=Headless
+                    -Dprism.order=sw
+                </project.testing.headless>
             </properties>
         </profile>
     </profiles>
@@ -54,9 +131,14 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.3</version>
+                <version>0.8.4</version>
                 <configuration>
                     <destFile>${project.basedir}/../target/jacoco.exec</destFile>
                     <append>true</append>
@@ -67,7 +149,6 @@
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
-                    <!-- attached to Maven test phase -->
                     <execution>
                         <id>report</id>
                         <phase>test</phase>
@@ -80,76 +161,28 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>3.0.0-M4</version>
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <excludedGroups>skip</excludedGroups>
                     <groups>${project.testing.tags}</groups>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M3</version>
-                <executions>
-                    <execution>
-                        <id>integration-testing</id>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
-                        <configuration>
-                            <argLine>${project.testing.argLine}</argLine>
-                            <groups>integration</groups>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>properties-maven-plugin</artifactId>
-                <version>1.0.0</version>
-                <executions>
-                    <execution>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>write-project-properties</goal>
-                        </goals>
-                        <configuration>
-                            <outputFile>${project.basedir}/target/classes/testing.properties</outputFile>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <argLine>@{argLine} ${project.testing.headless} ${project.testing.arguments}</argLine>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-    <modules>
-        <module>de.raphaelmuesseler.financer.client</module>
-        <module>de.raphaelmuesseler.financer.client.javafx</module>
-        <module>de.raphaelmuesseler.financer.server</module>
-        <module>de.raphaelmuesseler.financer.shared</module>
-        <module>de.raphaelmuesseler.financer.util</module>
-    </modules>
 
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.3.1</version>
+            <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.3.1</version>
+            <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
